--- a/private-site/CapturaActaE.html
+++ b/private-site/CapturaActaE.html
@@ -129,11 +129,11 @@ span.price {
          <div class="row">
             <div class="col-50">
               <label for="fnumeroevento">Numero del Evento</label>
-              <input type="text" id="fnumeroevento" name="numereoevento" placeholder="aqui Numero evento">
+              <input type="text" id="fnumeroevento" name="numereoevento" placeholder="aqui Numero evento" readonly>
             </div>
             <div class="col-50">
               <label for="fnombreevento">Nombre del Evento</label>
-              <input type="text" id="fnombreevento" name="nombreevento" placeholder="Aqui Nombre del Evento">
+              <input type="text" id="fnombreevento" name="nombreevento" placeholder="Aqui Nombre del Evento" readonly>
             </div>
           </div>
 
@@ -192,7 +192,8 @@ span.price {
             <input type="text" id="fPartido2" name="partidodos" placeholder="Votos en numero">
             <label for="fPartido3"><i class="fa fa-user-circle" aria-hidden="true"></i> Partido Tres</label>
             <input type="text" id="fPartido3" name="partidotres" placeholder="Votos en numero">
-            <label for="ftotalvotos">Total de Votos</label>
+            <label for="festadoActa">Estado del Acta</label>
+            <input type="text" id="festadoActa" name="estadoacta" value="A revisar" readonly>
            <div class="row">
            </div>
           </div>
